fix the styling on the button so it doesn't look so out of place

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,7 +33,23 @@ div.container2 button {
     margin: 0;
     position: absolute;
     top: 300%;
-    left: 50%;
+    left: 55%;
     margin-right: -50%;
     transform: translate(-50%, -50%) 
+}
+
+div.container2 button {
+    font-size: 30px;
+    background-color: #003249;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 12px;
+}
+
+div.container2 button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19)
 }
